reserved bal, C_PRE and POST add
Former-commit-id: 8f26a609ec2e539bc7b5f3e1d6e91d0c55692eae

--- a/instapay-tee-client/templates/channels.tmpl
+++ b/instapay-tee-client/templates/channels.tmpl
@@ -53,10 +53,10 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h4 class="modal-title">Detail request information</h4>
+                                    <h4 class="modal-title">Detail request information kk</h4>
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
-                                <div class="modal-body">
+                                    <p class="font-weight-bold">Reserved bal: {{ $channel.ReservedBalance }}</p>
                                     <p class="font-weight-bold">My deposit: {{ $channel.MyDeposit }}</p>
                                     <p class="font-weight-bold">My balance: {{ $channel.MyBalance }}</p>
                                 </div>
