--- a/instapay/src/github.com/sslab-instapay/instapay-tee-client/templates/channels.tmpl
+++ b/instapay/src/github.com/sslab-instapay/instapay-tee-client/templates/channels.tmpl
@@ -53,12 +53,16 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h4 class="modal-title">Detail request information</h4>
+                                    <h4 class="modal-title">Detail request information asdfasdfasdfdasf</h4>
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                    <p class="font-weight-bold">My deposit: {{ $channel.MyDeposit }}</p>
+asdfasdfdasfasdf
+               <!--                     <p class="font-weight-bold">My deposit: {{ $channel.MyDeposit }}</p>
+                                    <p class="font-weight-bold">My balance: {{ $channel.MyBalance }}</p> -->
                                     <p class="font-weight-bold">My balance: {{ $channel.MyBalance }}</p>
+
+                                    <p class="font-weight-bold">Reserved bal: {{ $channel.MyBalance }}</p>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
