channel size 628 -> 632 work

--- a/instapay-tee-client/templates/channels.tmpl
+++ b/instapay-tee-client/templates/channels.tmpl
@@ -39,7 +39,7 @@
                 <tbody>
                 {{ range $i, $channel := .channelList }}
                     <tr>
-                        <form method="post" action="close">
+                        <form method="post" action="/channels/requests/close">
                             <td>{{ $channel.ChannelId }}</td>
                             <td>{{ $channel.MyAddress }}</td>
                             <td>{{ $channel.OtherAddress }}</td>
