--- a/instapay-tee-client/templates/channels.tmpl
+++ b/instapay-tee-client/templates/channels.tmpl
@@ -70,9 +70,10 @@
                                     <h4 class="modal-title">Detail request information </h4>
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
-                                    <p class="font-weight-bold">My deposit: {{ $channel.MyDeposit }}</p>
-                                    <p class="font-weight-bold">My balance: {{ $channel.MyBalance }}</p>
-                                    <p class="font-weight-bold">Reserved bal: {{ $channel.ReservedBalance }}</p>
+				<div class="modal-body">
+                                    <p style="font-size:24px">My deposit: {{ $channel.MyDeposit }}</p>
+                                    <p style="font-size:24px">My balance: {{ $channel.MyBalance }}</p>
+                                    <p style="font-size:24px">Reserved bal: {{ $channel.ReservedBalance }}</p>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
